--- a/090123/index.html
+++ b/090123/index.html
@@ -12,29 +12,58 @@
 <body>
     <div class="wrapper-content">
         <div class="content">
-            <img class="img-content" src="./assets//arte-design.jpg"/>
-            <h2 class="title">Arte e Design</h2>
-            <p class="description">A arte e o design são formas poderosas de expressão humana que transcendem fronteiras culturais e temporais. Através da arte, os artistas podem compartilhar suas perspectivas únicas do mundo, provocar emoções e inspirar pensamento crítico. O design, por sua vez, desempenha um papel fundamental na nossa vida cotidiana, moldando produtos, espaços e experiências de maneira funcional e estética. Ambos desempenham um papel essencial na nossa sociedade, conectando-nos com nossa criatividade interior e estimulando a inovação.</p>
+            <div class="wrapper-img-content">
+                <img class="img-content" src="./assets/arte-design.jpg"/>
+            </div>
+            <div class="wrapper-text-content">
+                <h2 class="title">Arte e Design</h2>
+                <p class="description">A arte e o design são formas poderosas de expressão humana que transcendem fronteiras culturais e temporais. Através da arte, os artistas podem compartilhar suas perspectivas únicas do mundo, provocar emoções e inspirar pensamento crítico. O design, por sua vez, desempenha um papel fundamental na nossa vida cotidiana, moldando produtos, espaços e experiências de maneira funcional e estética. Ambos desempenham um papel essencial na nossa sociedade, conectando-nos com nossa criatividade interior e estimulando a inovação.</p>
+            </div>
         </div>
         <div class="content">
-            <h2 class="title">Educação e Cultura</h2>
-            <p class="description">A educação é o alicerce da cultura e da sociedade. Ela nos permite transmitir conhecimento, valores e tradições de geração em geração. Através da educação, exploramos nossa herança cultural, aprendemos a entender e respeitar perspectivas diferentes e desenvolvemos habilidades críticas para enfrentar desafios complexos. A cultura, por sua vez, enriquece nossas vidas, oferecendo uma variedade de expressões artísticas, culinária, música, dança e muito mais. Juntas, educação e cultura são forças poderosas que moldam nossa identidade e conectam as pessoas em todo o mundo.</p>
+            <div class="wrapper-img-content">
+                <img class="img-content" src="./assets/educacao-cultura.jpg"/>
+            </div>
+            <div class="wrapper-text-content">
+                <h2 class="title">Educação e Cultura</h2>
+                <p class="description">A educação é o alicerce da cultura e da sociedade. Ela nos permite transmitir conhecimento, valores e tradições de geração em geração. Através da educação, exploramos nossa herança cultural, aprendemos a entender e respeitar perspectivas diferentes e desenvolvemos habilidades críticas para enfrentar desafios complexos. A cultura, por sua vez, enriquece nossas vidas, oferecendo uma variedade de expressões artísticas, culinária, música, dança e muito mais. Juntas, educação e cultura são forças poderosas que moldam nossa identidade e conectam as pessoas em todo o mundo.</p>
+            </div>
+            </div>
+        <div class="content">
+            <div class="wrapper-img-content">
+                <img class="img-content" src="./assets/meioambiente-estilo.jpg"/>
+            </div>
+            <div class="wrapper-text-content">
+                <h2 class="title">Meio Ambiente e Estilo de Vida</h2>
+                <p class="description">A saúde do nosso planeta está intrinsecamente ligada ao nosso estilo de vida. À medida que reconhecemos a importância de preservar o meio ambiente, cada vez mais pessoas estão adotando práticas sustentáveis em suas vidas cotidianas. Isso envolve a redução do consumo de recursos naturais, a minimização de resíduos e a promoção de escolhas de estilo de vida que tenham um impacto positivo no planeta. Ao adotarmos um estilo de vida mais consciente, podemos contribuir para a conservação do meio ambiente e garantir um futuro sustentável para as próximas gerações.</p>
+            </div>
         </div>
         <div class="content">
-            <h2 class="title">Meio Ambiente e Estilo de Vida</h2>
-            <p class="description">A saúde do nosso planeta está intrinsecamente ligada ao nosso estilo de vida. À medida que reconhecemos a importância de preservar o meio ambiente, cada vez mais pessoas estão adotando práticas sustentáveis em suas vidas cotidianas. Isso envolve a redução do consumo de recursos naturais, a minimização de resíduos e a promoção de escolhas de estilo de vida que tenham um impacto positivo no planeta. Ao adotarmos um estilo de vida mais consciente, podemos contribuir para a conservação do meio ambiente e garantir um futuro sustentável para as próximas gerações.</p>
-        </div>
-        <div class="content">
-            <h2 class="title">Ciência e Tecnologia</h2>
+            <div class="wrapper-img-content">
+                <img class="img-content" src="./assets/ciencia-tecnologia.jpg"/>
+            </div>
+            <div class="wrapper-text-content">
+                <h2 class="title">Ciência e Tecnologia</h2>
             <p class="description">A ciência e a tecnologia são os motores do progresso humano. Através da pesquisa científica, expandimos nosso conhecimento sobre o mundo natural e desenvolvemos soluções para os desafios que enfrentamos. A tecnologia, por sua vez, transforma a maneira como vivemos, trabalhamos e nos comunicamos. A rápida evolução tecnológica está moldando o futuro, abrindo novas oportunidades e desafios. À medida que exploramos o espaço, desenvolvemos inteligência artificial e avançamos na medicina, a ciência e a tecnologia continuam a impulsionar nossa civilização para novos horizontes.</p>
+            </div>
         </div>
         <div class="content">
-            <h2 class="title">Saúde e Bem-Estar</h2>
+            <div class="wrapper-img-content">
+                <img class="img-content" src="./assets/saude-bemestar.jpg"/>
+            </div>
+            <div class="wrapper-text-content">
+                <h2 class="title">Saúde e Bem-Estar</h2>
             <p class="description">A saúde e o bem-estar são fundamentais para uma vida plena e significativa. Cuidar do nosso corpo e mente é essencial para uma vida equilibrada. Isso envolve a adoção de hábitos saudáveis, como alimentação balanceada, exercícios regulares, sono adequado e gerenciamento do estresse. Além disso, a saúde mental desempenha um papel crucial em nosso bem-estar geral. A atenção plena, a terapia e o apoio social são recursos importantes para manter uma mente saudável. Ao priorizarmos nossa saúde e bem-estar, podemos viver vidas mais felizes e produtivas.</p>
+            </div>
         </div>
         <div class="content">
-            <h2 class="title">Economia e Finanças</h2>
+            <div class="wrapper-img-content">
+                <img class="img-content" src="./assets//economia-financas.jpg"/>
+            </div>
+            <div class="wrapper-text-content">
+                <h2 class="title">Economia e Finanças</h2>
             <p class="description">A economia é o motor da sociedade, moldando a maneira como produzimos, distribuímos e consumimos recursos. As finanças desempenham um papel fundamental na gestão do dinheiro e na tomada de decisões financeiras inteligentes. O entendimento dos princípios econômicos e a alfabetização financeira são essenciais para indivíduos e comunidades prosperarem. A estabilidade econômica e a equidade são metas importantes a serem perseguidas, pois impactam diretamente a qualidade de vida das pessoas. O planejamento financeiro adequado é uma ferramenta valiosa para alcançar a segurança financeira e a realização de metas pessoais e familiares.</p>
+            </div>
         </div>
     </div>
     <script src="./script.js"></script>
